--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
@@ -120,4 +120,195 @@
 </div>
 
 </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IV2025 Workshop</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Header Styles */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 50px;
+            background-color: #f8f9fa;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 30px;
+        }
+
+        .logo {
+            height: 50px;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+        }
+
+        /* Hero Section */
+        .hero-image {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+        }
+
+        .title-box {
+            background-color: rgba(0,0,0,0.7);
+            color: white;
+            padding: 30px;
+            margin-top: -100px;
+            position: relative;
+        }
+
+        /* Content Sections */
+        .section {
+            padding: 50px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .intro-container {
+            display: flex;
+            gap: 30px;
+            align-items: center;
+            margin: 40px 0;
+        }
+
+        .intro-text {
+            flex: 1;
+        }
+
+        .intro-image {
+            flex: 1;
+            max-width: 500px;
+        }
+
+        /* Agenda Styles */
+        .agenda-item {
+            display: flex;
+            margin: 20px 0;
+            padding: 15px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+        }
+
+        .time {
+            width: 100px;
+            font-weight: bold;
+        }
+
+        .session-title {
+            flex: 1;
+        }
+
+        .speaker-info {
+            width: 200px;
+            font-size: 0.9em;
+        }
+
+        /* Organizers Section */
+        .organizers-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .organizer-card {
+            text-align: center;
+        }
+
+        .organizer-photo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        @media (max-width: 768px) {
+            .header {
+                flex-direction: column;
+                padding: 20px;
+            }
+            
+            .intro-container {
+                flex-direction: column;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header class="header">
+        <div class="logo-container">
+            <img src="your-company-logo.png" alt="Company Logo" class="logo">
+            <img src="org-logo.png" alt="Organization Logo" class="logo">
+        </div>
+        <nav class="nav-links">
+            <a href="#intro">Introduction</a>
+            <a href="#agenda">Agenda</a>
+            <a href="#organizers">Organizers</a>
+        </nav>
+    </header>
+
+    <img src="romania.jpg" alt="Romania" class="hero-image">
+
+    <div class="title-box">
+        <h1>Workshop Title</h1>
+        <h2>Date: October 15, 2025 | Location: Rome, Italy</h2>
+    </div>
+
+    <section class="section" id="intro">
+        <h2>Introduction</h2>
+        <div class="intro-container">
+            <div class="intro-text">
+                <p>Your workshop introduction text here...</p>
+            </div>
+            <img src="intro-image.jpg" alt="Intro Image" class="intro-image">
+        </div>
+    </section>
+
+    <section class="section" id="agenda">
+        <h2>Agenda</h2>
+        <div class="agenda-item">
+            <div class="time">09:00</div>
+            <div class="session-title">Welcome & Opening</div>
+            <div class="speaker-info"></div>
+        </div>
+        <!-- Add more agenda items following the same structure -->
+    </section>
+
+    <section class="section" id="organizers">
+        <h2>Organizers</h2>
+        <div class="organizers-grid">
+            <div class="organizer-card">
+                <img src="organizer1.jpg" alt="Organizer 1" class="organizer-photo">
+                <h3>John Doe</h3>
+                <p>University of Example</p>
+                <a href="http://example.com">Personal Page</a>
+            </div>
+            <!-- Add more organizer cards -->
+        </div>
+    </section>
+</body>
 </html>
+
