--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
         <div class="agenda-item">
             <div class="time">09:00</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-            <div class="speaker-info">Prof. Maria Rossi<br>Conference Chair</div>
+            <div class="speaker-info">Prof. A<br>Conference Chair</div>
         </div>
 
         <div class="agenda-item">
             <div class="time">09:30</div>
             <div class="session-title">Keynote: Future of Intelligent Vehicles</div>
             <div class="speaker-info">
-                Dr. James Smith<br>
+                Dr. Basasasa<br>
                 <em>Toyota Research Institute</em><br>
                 <a href="http://example.com/jsmith">Profile</a>
             </div>
@@ -193,8 +193,8 @@
             <div class="time">11:00</div>
             <div class="session-title">Autonomous Driving in Urban Environments</div>
             <div class="speaker-info">
-                Dr. Wei Zhang<br>
-                <em>Baidu Apollo</em><br>
+                Dr. Cacaca<br>
+                <em>Huawei</em><br>
                 <a href="http://example.com/wzhang">Homepage</a>
             </div>
         </div>
@@ -209,7 +209,7 @@
             <div class="time">13:30</div>
             <div class="session-title">V2X Communication Challenges</div>
             <div class="speaker-info">
-                Prof. Elena Ivanova<br>
+                Prof. Dadada<br>
                 <em>TU Munich</em><br>
                 <a href="http://example.com/eivanova">Website</a>
             </div>
@@ -225,7 +225,7 @@
             <div class="time">15:00</div>
             <div class="session-title">Panel Discussion: Ethics in Autonomous Systems</div>
             <div class="speaker-info">
-                Moderator: Dr. Ahmed Al-Faresi<br>
+                Moderator: Dr. Eaeaea<br>
                 Panelists: All Speakers
             </div>
         </div>
@@ -236,7 +236,7 @@
         <div class="organizers-grid">
             <div class="organizer-card">
                 <img src="organizer1.jpg" alt="Dr. Sophia Chen" class="organizer-photo">
-                <h3>Dr. Sophia Chen</h3>
+                <h3>Dr. AAAA</h3>
                 <p>Stanford University</p>
                 <p>Autonomous Systems Lab</p>
                 <a href="mailto:sophia@iv2025.org">Email</a> | 
@@ -245,7 +245,7 @@
 
             <div class="organizer-card">
                 <img src="organizer2.jpg" alt="Prof. Luca Bianchi" class="organizer-photo">
-                <h3>Prof. Luca Bianchi</h3>
+                <h3>Prof. BBBB</h3>
                 <p>Politecnico di Torino</p>
                 <p>Intelligent Transportation Group</p>
                 <a href="mailto:lbianchi@iv2025.org">Email</a> | 
@@ -254,7 +254,7 @@
 
             <div class="organizer-card">
                 <img src="organizer3.jpg" alt="Dr. Priya Patel" class="organizer-photo">
-                <h3>Dr. Priya Patel</h3>
+                <h3>Dr. CCCC</h3>
                 <p>MIT CSAIL</p>
                 <p>Computer Vision Research</p>
                 <a href="mailto:priya@iv2025.org">Email</a> | 
@@ -263,7 +263,7 @@
 
             <div class="organizer-card">
                 <img src="organizer4.jpg" alt="Prof. Hiroshi Tanaka" class="organizer-photo">
-                <h3>Prof. Hiroshi Tanaka</h3>
+                <h3>Prof. DDDD</h3>
                 <p>University of Tokyo</p>
                 <p>Robotics Department</p>
                 <a href="mailto:tanaka@iv2025.org">Email</a> | 
