--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IV2025 Workshop</title>
+    <title>IV2025 Special Session</title>
     <style>
         * {
             margin: 0;
@@ -223,8 +223,8 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="your-company-logo.png" alt="Company Logo" class="logo">
-            <img src="org-logo.png" alt="Organization Logo" class="logo">
+            <img src="huawei-logo.png" alt="Company Logo" class="logo">
+            <img src="IV2025.png" alt="Organization Logo" class="logo">
         </div>
         <nav class="nav-links">
             <a href="#intro">Introduction</a>
@@ -236,8 +236,8 @@
     <img src="romania.jpg" alt="Romania" class="hero-image">
 
     <div class="title-box">
-        <h1>Workshop Title</h1>
-        <h2>Date: October 15, 2025 | Location: Rome, Italy</h2>
+        <h1>Challenges and Opportunities for Safe and Reliable Autonomous Agents in the Era of Large Language Models</h1>
+        <h2>Date: June 23, 2025 | Location: Cluj-Napoca, Romania</h2>
     </div>
 
     <section class="section" id="intro">
@@ -256,15 +256,15 @@
         <div class="agenda-item">
             <div class="time">09:00</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-            <div class="speaker-info">Prof. Maria Rossi<br>Conference Chair</div>
+            <div class="speaker-info">Someone<br>Conference Chair</div>
         </div>
 
         <div class="agenda-item">
             <div class="time">09:30</div>
-            <div class="session-title">Keynote: Future of Intelligent Vehicles</div>
+            <div class="session-title">Keynote: Keynote1234</div>
             <div class="speaker-info">
-                Dr. James Smith<br>
-                <em>Toyota Research Institute</em><br>
+                Keynote Speaker<br>
+                <em>Institute1</em><br>
                 <a href="http://example.com/jsmith">Profile</a>
             </div>
         </div>
@@ -277,10 +277,10 @@
 
         <div class="agenda-item">
             <div class="time">11:00</div>
-            <div class="session-title">Autonomous Driving in Urban Environments</div>
+            <div class="session-title">Presentation 1</div>
             <div class="speaker-info">
-                Dr. Wei Zhang<br>
-                <em>Baidu Apollo</em><br>
+                Dr. Ziquan Liu<br>
+                <em>QMUL(FULL Name)</em><br>
                 <a href="http://example.com/wzhang">Homepage</a>
             </div>
         </div>
@@ -293,10 +293,20 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">V2X Communication Challenges</div>
+            <div class="session-title">Presentation 2</div>
             <div class="speaker-info">
-                Prof. Elena Ivanova<br>
-                <em>TU Munich</em><br>
+                Xingyu Zhao<br>
+                <em>University of Warwick</em><br>
+                <a href="http://example.com/eivanova">Website</a>
+            </div>
+        </div>
+
+        <div class="agenda-item">
+            <div class="time">14:00</div>
+            <div class="session-title">Presentation 4</div>
+            <div class="speaker-info">
+                Xiaochun Cao<br>
+                <em>Sun Yat-Sen University</em><br>
                 <a href="http://example.com/eivanova">Website</a>
             </div>
         </div>
@@ -322,7 +332,7 @@
         <div class="organizers-grid">
             <div class="organizer-card">
                 <img src="organizer1.jpg" alt="Dr. Sophia Chen" class="organizer-photo">
-                <h3>Dr. Sophia Chen</h3>
+                <h3>Organizer 1</h3>
                 <p>Stanford University</p>
                 <p>Autonomous Systems Lab</p>
                 <a href="mailto:sophia@iv2025.org">Email</a> | 
@@ -331,7 +341,7 @@
 
             <div class="organizer-card">
                 <img src="organizer2.jpg" alt="Prof. Luca Bianchi" class="organizer-photo">
-                <h3>Prof. Luca Bianchi</h3>
+                <h3>Organizer 2</h3>
                 <p>Politecnico di Torino</p>
                 <p>Intelligent Transportation Group</p>
                 <a href="mailto:lbianchi@iv2025.org">Email</a> | 
@@ -340,7 +350,7 @@
 
             <div class="organizer-card">
                 <img src="organizer3.jpg" alt="Dr. Priya Patel" class="organizer-photo">
-                <h3>Dr. Priya Patel</h3>
+                <h3>Organizer 3</h3>
                 <p>MIT CSAIL</p>
                 <p>Computer Vision Research</p>
                 <a href="mailto:priya@iv2025.org">Email</a> | 
@@ -349,7 +359,7 @@
 
             <div class="organizer-card">
                 <img src="organizer4.jpg" alt="Prof. Hiroshi Tanaka" class="organizer-photo">
-                <h3>Prof. Hiroshi Tanaka</h3>
+                <h3>Organizer 4</h3>
                 <p>University of Tokyo</p>
                 <p>Robotics Department</p>
                 <a href="mailto:tanaka@iv2025.org">Email</a> | 
