--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </nav>
     </header>
 
-    <img src="romania.jpg" alt="Romania" class="hero-image">
+    <img src="images/heading.jpg" alt="Romania" class="hero-image">
 
     <div class="title-box">
         <h1>Challenges and Opportunities for Safe and Reliable Autonomous Agents in the Era of Large Language Models</h1>
