--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <h2>Introduction</h2>
         <div class="intro-container">
             <div class="intro-text">
-                <p>Your workshop introduction text here. This section provides an overview of the workshop's goals, topics, and significance. You can include details about the target audience, the relevance of the workshop to the IV2025 conference, and any other important information.</p>
+                <p>As autonomous agents continue to evolve, the integration of Large Language Models (LLMs) is reshaping their capabilities and impact. However, this new frontier presents unique challenges and opportunities in ensuring the safety, reliability, and ethical deployment of these systems. This session explores the complexities of designing and managing autonomous agents in the age of LLMs, focusing on issues such as robustness, explainability, bias, and accountability. Experts will discuss the latest advancements, potential risks, and strategies for fostering trust in these powerful technologies, while identifying key opportunities for innovation and responsible development.</p>
             </div>
             <img src="intro-image.jpg" alt="Intro Image" class="intro-image">
         </div>
@@ -254,34 +254,38 @@
         <h2>Agenda</h2>
         
         <div class="agenda-item">
-            <div class="time">09:00</div>
+            <div class="time">08:45</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-            <div class="speaker-info">Someone<br>Conference Chair</div>
+            <div class="speaker-info">Dr. Qunli Zhang</div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">09:30</div>
-            <div class="session-title">Keynote: Keynote1234</div>
+            <div class="time">09:00</div>
+            <div class="session-title">Keynote: Explainable Attribution Technology and its Application in Autonomous Agent Reliability</div>
             <div class="speaker-info">
-                Keynote Speaker<br>
-                <em>Institute1</em><br>
-                <a href="http://example.com/jsmith">Profile</a>
+                Prof. Xiaochun Cao<br>
+                <em>Sun Yat-sen University</em><br>
+                <a href="https://scst.sysu.edu.cn/members/caoxiaochun.htmh">Homepage</a>
             </div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">10:30</div>
-            <div class="session-title">Coffee Break</div>
-            <div class="speaker-info"></div>
+            <div class="time">10:00</div>
+            <div class="session-title">Invited talk</div>
+            <div class="speaker-info">
+                Dr. Xingyu Zhao<br>
+                <em>University of Warwick</em><br>
+                <a href="https://www.xzhao.me/">Homepage</a>
+            </div>
         </div>
 
         <div class="agenda-item">
             <div class="time">11:00</div>
-            <div class="session-title">Presentation 1</div>
+            <div class="session-title">Invited talk</div>
             <div class="speaker-info">
                 Dr. Ziquan Liu<br>
-                <em>QMUL(FULL Name)</em><br>
-                <a href="http://example.com/wzhang">Homepage</a>
+                <em>Queen Mary University of London</em><br>
+                <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
             </div>
         </div>
 
@@ -293,38 +297,49 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">Presentation 2</div>
+            <div class="session-title">Invited talk</div>
             <div class="speaker-info">
-                Xingyu Zhao<br>
-                <em>University of Warwick</em><br>
-                <a href="http://example.com/eivanova">Website</a>
+                Prof. Angelo Cangelosi<br>
+                <em>University of Manchester</em><br>
+                <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi">Homepage</a>
             </div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">14:00</div>
-            <div class="session-title">Presentation 4</div>
+            <div class="time">14:20</div>
+            <div class="session-title">Invited Talk</div>
             <div class="speaker-info">
-                Xiaochun Cao<br>
-                <em>Sun Yat-Sen University</em><br>
-                <a href="http://example.com/eivanova">Website</a>
+                TBA<br>
+                <em>TBA</em><br>
+                <a href="https://tte-de-rams.github.io/">TBA</a>
             </div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">14:30</div>
+            <div class="time">15:20</div>
             <div class="session-title">Coffee Break</div>
             <div class="speaker-info"></div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">15:00</div>
+            <div class="time">15:30</div>
             <div class="session-title">Panel Discussion: Ethics in Autonomous Systems</div>
             <div class="speaker-info">
                 Moderator: Dr. Ahmed Al-Faresi<br>
                 Panelists: All Speakers
             </div>
         </div>
+
+        <div class="agenda-item">
+            <div class="time">16:30</div>
+            <div class="session-title">Invited Talk</div>
+            <div class="speaker-info">
+                TBA<br>
+                <em>TBA</em><br>
+                <a href="https://tte-de-rams.github.io/">TBA</a>
+            </div>
+        </div>
+        
     </section>
 
     <section class="section" id="organizers">
