--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">Invited Talk</div>
+            <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
             <div class="speaker-info">
                 Prof. Angelo Cangelosi<br>
                 <em>University of Manchester</em><br>
