--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="intro-text">
                 <p>As autonomous agents continue to evolve, the integration of Large Language Models (LLMs) is reshaping their capabilities and impact. However, this new frontier presents unique challenges and opportunities in ensuring the safety, reliability, and ethical deployment of these systems. This session explores the complexities of designing and managing autonomous agents in the age of LLMs, focusing on issues such as robustness, explainability, bias, and accountability. Experts will discuss the latest advancements, potential risks, and strategies for fostering trust in these powerful technologies, while identifying key opportunities for innovation and responsible development.</p>
             </div>
-            <img src="intro-image.jpg" alt="Intro Image" class="intro-image">
+<!--             <img src="intro-image.jpg" alt="Intro Image" class="intro-image"> -->
         </div>
     </section>
 
@@ -348,15 +348,14 @@
         <h2>Organizers</h2>
         <div class="organizers-grid">
             <div class="organizer-card">
-                <img src="organizer3.jpg" alt="Zifan Zeng" class="organizer-photo">
+<!--                 <img src="organizer3.jpg" alt="Zifan Zeng" class="organizer-photo"> -->
                 <h3>Zifan Zeng</h3>
                 <p>Huawei&Technical University of Munich</p>
-                <a href="mailto:zifan.zeng@huawei.com">Email</a> | 
-<!--                 <a href="https://sites.google.com/view/ziquanliu">Homepage</a> -->
+                <a href="mailto:zifan.zeng@huawei.com">Email</a>  
             </div>
             
             <div class="organizer-card">
-                <img src="organizer1.jpg" alt="Dr. Qunli Zhang" class="organizer-photo">
+<!--                 <img src="organizer1.jpg" alt="Dr. Qunli Zhang" class="organizer-photo"> -->
                 <h3>Dr. Qunli Zhang</h3>
                 <p>Huawei</p>
                 <p>RAMS Lab</p>
@@ -364,7 +363,7 @@
             </div>
 
             <div class="organizer-card">
-                <img src="organizer2.jpg" alt="Dr. Ziquan Liu" class="organizer-photo">
+<!--                 <img src="organizer2.jpg" alt="Dr. Ziquan Liu" class="organizer-photo"> -->
                 <h3>Dr. Ziquan Liu</h3>
                 <p>Queen Mary University of London</p>
                 <p>Computer Vision Group</p>
@@ -373,7 +372,7 @@
             </div>
 
             <div class="organizer-card">
-                <img src="organizer4.jpg" alt="Prof. Shaogang Gong" class="organizer-photo">
+<!--                 <img src="organizer4.jpg" alt="Prof. Shaogang Gong" class="organizer-photo"> -->
                 <h3>Prof. Shaogang Gong</h3>
                 <p>Queen Mary University of London</p>
                 <p>Computer Vision Group</p>
