--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo-container">
+<!--         <div class="logo-container">
             <img src="huawei-logo.png" alt="Company Logo" class="logo">
             <img src="IV2025.png" alt="Organization Logo" class="logo">
-        </div>
+        </div> -->
         <nav class="nav-links">
             <a href="#intro">Introduction</a>
             <a href="#agenda">Agenda</a>
