--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </section>
 
     <section class="section" id="agenda">
-        <h2>Agenda</h2>
+        <h2>Agenda (Tentative)</h2>
         
         <div class="agenda-item">
             <div class="time">08:45</div>
@@ -309,9 +309,9 @@
             <div class="time">14:20</div>
             <div class="session-title">Invited Talk</div>
             <div class="speaker-info">
-                TBA<br>
-                <em>TBA</em><br>
-                <a href="https://tte-de-rams.github.io/">TBA</a>
+                Prof. Lorenzo Baraldi<br>
+                <em>University of Modena and Reggio Emilia</em><br>
+                <a href="https://www.lorenzobaraldi.com/">TBA</a>
             </div>
         </div>
 
@@ -325,9 +325,9 @@
             <div class="time">15:30</div>
             <div class="session-title">Invited Talk</div>
             <div class="speaker-info">
-                TBA<br>
-                <em>TBA</em><br>
-                <a href="https://tte-de-rams.github.io/">TBA</a>
+                Prof. Wei Pan<br>
+                <em>University of Manchester</em><br>
+                <a href="https://panweihit.github.io/">TBA</a>
             </div>
         </div>
 
