--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="speaker-info">
                 Prof. Lorenzo Baraldi<br>
                 <em>University of Modena and Reggio Emilia</em><br>
-                <a href="https://www.lorenzobaraldi.com/">TBA</a>
+                <a href="https://www.lorenzobaraldi.com/">Homepage</a>
             </div>
         </div>
 
@@ -327,7 +327,7 @@
             <div class="speaker-info">
                 Prof. Wei Pan<br>
                 <em>University of Manchester</em><br>
-                <a href="https://panweihit.github.io/">TBA</a>
+                <a href="https://panweihit.github.io/">Homepage</a>
             </div>
         </div>
 
