--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="agenda-item">
             <div class="time">08:45</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-            <div class="speaker-info">Dr. Qunli Zhang</div>
+            <div class="speaker-info">Dr. Zheng Hu</div>
         </div>
 
         <div class="agenda-item">
@@ -337,6 +337,14 @@
             <div class="speaker-info">
                 Moderator: Dr. Qunli Zhang<br>
                 Panelists: All Invited Speakers
+            </div>
+        </div>
+
+        <div class="agenda-item">
+            <div class="time">17:00</div>
+            <div class="session-title">Closing Remarks</div>
+            <div class="speaker-info">
+                Dr. Xiao Chen<br>
             </div>
         </div>
 
