--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
+            background-color: #6f4f1f;
         }
 
         /* Header Styles */
