--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
-            background-color: #6f4f1f;
+            background-color: #b38f59;
         }
 
         /* Header Styles */
@@ -26,6 +26,7 @@
             display: flex;
             align-items: center;
             gap: 30px;
+            background-color: #ffffff;
         }
 
         .logo {
@@ -80,12 +81,14 @@
             padding: 50px;
             max-width: 1200px;
             margin: 0 auto;
+            background-color: #ffffff;
         }
 
         .section h2 {
             margin-bottom: 30px;
             font-size: 2em;
             color: #333;
+            background-color: #ffffff;
         }
 
         .intro-container {
@@ -93,17 +96,20 @@
             gap: 30px;
             align-items: center;
             margin: 40px 0;
+            background-color: #ffffff;
         }
 
         .intro-text {
             flex: 1;
             line-height: 1.6;
+            background-color: #ffffff;
         }
 
         .intro-image {
             flex: 1;
             max-width: 500px;
             border-radius: 10px;
+            background-color: #ffffff;
         }
 
         /* Agenda Styles */
@@ -114,6 +120,7 @@
             background-color: #f8f9fa;
             border-radius: 5px;
             align-items: center;
+            background-color: #ffffff;
         }
 
         .time {
