--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
         .title-box {
             background-color: rgba(0, 0, 0, 0.7);
-            color: white;
+            color: black;
             padding: 30px;
-            margin-top: -100px;
+            margin-top: -500px;
             position: relative;
             text-align: center;
             width: 100%;
@@ -126,16 +126,19 @@
         .time {
             width: 100px;
             font-weight: bold;
+            background-color: #ffffff;
         }
 
         .session-title {
             flex: 1;
+            background-color: #ffffff;
         }
 
         .speaker-info {
             width: 200px;
             font-size: 0.9em;
             text-align: right;
+            background-color: #ffffff;
         }
 
         .speaker-info a {
@@ -148,12 +151,13 @@
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 30px;
             margin-top: 40px;
+            background-color: #ffffff;
         }
 
         .organizer-card {
             text-align: center;
             padding: 20px;
-            background-color: #f8f9fa;
+            background-color: #ffffff;
             border-radius: 10px;
         }
 
