--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             padding: 0;
             box-sizing: border-box;
             font-family: Arial, sans-serif;
-            background-color: #b38f59;
         }
 
         /* Header Styles */
@@ -26,7 +25,6 @@
             display: flex;
             align-items: center;
             gap: 30px;
-            background-color: #ffffff;
         }
 
         .logo {
@@ -57,9 +55,9 @@
 
         .title-box {
             background-color: rgba(0, 0, 0, 0.7);
-            color: black;
+            color: white;
             padding: 30px;
-            margin-top: -500px;
+            margin-top: -100px;
             position: relative;
             text-align: center;
             width: 100%;
@@ -81,14 +79,12 @@
             padding: 50px;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: #ffffff;
         }
 
         .section h2 {
             margin-bottom: 30px;
             font-size: 2em;
             color: #333;
-            background-color: #ffffff;
         }
 
         .intro-container {
@@ -96,20 +92,17 @@
             gap: 30px;
             align-items: center;
             margin: 40px 0;
-            background-color: #ffffff;
         }
 
         .intro-text {
             flex: 1;
             line-height: 1.6;
-            background-color: #ffffff;
         }
 
         .intro-image {
             flex: 1;
             max-width: 500px;
             border-radius: 10px;
-            background-color: #ffffff;
         }
 
         /* Agenda Styles */
@@ -120,25 +113,21 @@
             background-color: #f8f9fa;
             border-radius: 5px;
             align-items: center;
-            background-color: #ffffff;
         }
 
         .time {
             width: 100px;
             font-weight: bold;
-            background-color: #ffffff;
         }
 
         .session-title {
             flex: 1;
-            background-color: #ffffff;
         }
 
         .speaker-info {
             width: 200px;
             font-size: 0.9em;
             text-align: right;
-            background-color: #ffffff;
         }
 
         .speaker-info a {
@@ -151,13 +140,12 @@
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 30px;
             margin-top: 40px;
-            background-color: #ffffff;
         }
 
         .organizer-card {
             text-align: center;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #f8f9fa;
             border-radius: 10px;
         }
 
