--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
         <div class="agenda-item">
             <div class="time">10:00</div>
-            <div class="session-title">Invited Talk</div>
+            <div class="session-title">Invited Talk: Probabilistic Verification of AI Agents</div>
             <div class="speaker-info">
                 Dr. Xingyu Zhao<br>
                 <em>University of Warwick</em><br>
@@ -281,7 +281,7 @@
 
         <div class="agenda-item">
             <div class="time">11:00</div>
-            <div class="session-title">Invited Talk</div>
+            <div class="session-title">Invited Talk: Bridging the Gap between Interpretable AI Research and Real World AI Agents</div>
             <div class="speaker-info">
                 Dr. Ziquan Liu<br>
                 <em>Queen Mary University of London</em><br>
@@ -307,7 +307,7 @@
 
         <div class="agenda-item">
             <div class="time">14:20</div>
-            <div class="session-title">Invited Talk</div>
+            <div class="session-title">Invited Talk: Reliable Visual-Language Grounding for Embodied AI Agents</div>
             <div class="speaker-info">
                 Prof. Lorenzo Baraldi<br>
                 <em>University of Modena and Reggio Emilia</em><br>
@@ -323,7 +323,7 @@
 
         <div class="agenda-item">
             <div class="time">15:30</div>
-            <div class="session-title">Invited Talk</div>
+            <div class="session-title">Invited Talk: Multi-robot Control Using Bayesian Machine Learning.</div>
             <div class="speaker-info">
                 Prof. Wei Pan<br>
                 <em>University of Manchester</em><br>
